# template-app-cpp

./: CMakeLists.txt  Dockerfile  Makefile  README.md
scripts/: templateapp.sh
src/: CMakeLists.txt  templateapp.m.cpp
src/templateapp_util/: CMakeLists.txt  templateapp_util.cpp  templateapp_util.h
src/util/: CMakeLists.txt  util.cpp  util.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  util.t.cpp
tests/unit/: CMakeLists.txt  templateapp_util.t.cpp
